--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Serhii Pimenov <serhii@pimenov.com.ua>",
   "name": "@olton/model",
-  "version": "0.15.0",
-  "description": "Reactive model for two-way data binding",
+  "version": "0.16.0",
+  "description": "Reactive model with two-way data binding",
   "keywords": [
     "javascript",
     "html",
