--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "npm run clean && cross-env NODE_NO_WARNINGS=1 MODE=production node build.js",
     "dev": "npm run clean && cross-env NODE_NO_WARNINGS=1 MODE=development node build.js",
     "pub": "npm run build && npm publish --access public",
-    "test": "easytest --include='__tests__/*.test.js'",
+    "test": "latte --dom --progress=none -v",
     "check": "npx biome check",
     "start": "vite"
   },
@@ -41,12 +41,12 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@olton/easytest": "^0.41.1",
     "@olton/esbuild-plugin-progress": "^0.3.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.25.4",
     "esbuild-plugin-replace": "^1.4.0",
-    "shx": "^0.3.4",
-    "vite": "^6.2.0"
+    "shx": "^0.4.0",
+    "vite": "^6.3.5",
+    "@olton/latte": "^0.15.0"
   }
 }
